syntax = "proto3";
package auth;
option java_package = "com.bestStore.auth";
option java_multiple_files = true;
import "auth-service/dto/result.proto";
import "auth-service/dto/authentication_credentials.proto";

service RememberPasswordServiceGrpc{
  rpc rememberPassword (dto.AuthenticationCredentials) returns(dto.Result);
}