syntax = "proto3";
package dto;
option java_package = "com.bestStore.notification";
option java_multiple_files = true;

enum NotificationType{
  REGISTRATION = 0;
  RESET_PASSWORD = 1;
}

